<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/cofeebanner"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="10sp"
        android:text="@string/about_us"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="278dp"
        android:layout_height="71dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="true"
        android:text="@string/feel_the_original_taste_of_indonesia_cofee_that_make_your_day_feel_better"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <ImageView
        android:id="@+id/iconlocation"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="357dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon_location"
        android:src="@drawable/locationicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/location"
        android:layout_width="293dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:adjustViewBounds="true"
        android:text="@string/jl_pangeran_dipenogoro_no_232_makassar_indonesia"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iconlocation"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <ImageView
        android:id="@+id/emailicon"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="357dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/email_icon"
        android:src="@drawable/emailicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconlocation" />

    <TextView
        android:id="@+id/email"
        android:layout_width="293dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:adjustViewBounds="true"
        android:text="@string/cofeeshop_gmail_com"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/location" />

    <ImageView
        android:id="@+id/timeicon"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="357dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/time_icon"
        android:src="@drawable/timeicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailicon" />

    <TextView
        android:id="@+id/time"
        android:layout_width="293dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:adjustViewBounds="true"
        android:text="@string/_08_00_am_09_00_pm"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/timeicon"
        app:layout_constraintTop_toBottomOf="@id/email" />


</androidx.constraintlayout.widget.ConstraintLayout>